# online_mrc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDME.sh  INSTALLME.sh  LICENSE  README.md  accurate_plot.sh  accurate_run.sh  main.c  masc_thesis_plot.sh  meson.build  plot.sh  plot_results.sh  run.sh  shell.nix
bench/: fast_slow_path_performance_test.c  generate_mrc.c  meson.build
bench/hash_test/: hash_performance_test.c  meson.build
bench/lookup_test/: lookup_performance_test.c  meson.build
bench/mrc_test/: meson.build  mrc_buckets_test.c  mrc_performance_test.c
scripts/binarize-traces/: Cargo.toml
scripts/binarize-traces/src/: access.rs  convert.rs  main.rs
src/: meson.build
src/analysis/: analyze_clients.cpp  analyze_rw.cpp  analyze_trace.cpp  analyze_ttls.cpp  meson.build  print_trace.py  ttl_analysis.py  verify_trace.py  wss.py
src/analysis/cardinality/: cardinality_analyzer.c  meson.build  plot_cardinality.py
src/analysis/common/: common.py  trace.py
src/analysis/compare/: compare_mrc.c  meson.build
src/analysis/interval/: analyzer.c  analyzer.py  interval_analyzer.c  interval_olken.c  interval_statistics.c  interval_test.c  meson.build  plot_intervals.py
src/analysis/lifetime/: lifetime.cpp  lifetime_list.cpp  meson.build
src/analysis/log/: analyze_log.py
src/analysis/mrc/: compare_mrc.c  create_oracles.py  deprecated_generate_mrc.c  generate_mrc.c  generate_multi_mrc.c  generate_oracle.c  meson.build  run_mrc_generators.py  runner_arguments.c  runner_arguments.h  trace_runner.c  trace_runner.h
src/analysis/plot/: plot_float64_array.py  plot_histogram.py  plot_mrc.py
src/analysis/read_write/: meson.build  read_write.py  time_between_accesses.c  time_between_accesses.py
src/analysis/statistics/: plot_statistics.py
src/analysis/text/: convert_to_text.py  meson.build  print_trace.c
src/analysis/time_to_live/: ttl_analysis.py  ttl_vs_size.py
src/analysis/ttl/: ttl_analysis.py
src/analysis/wss/: working_set_size.py
src/common/: MurmurHash3.c  MurmurHash3.h  top-down-size-splay.c
src/lib/: meson.build
src/lib/array/: binary64_array.c  float64_array.c  meson.build  print_array.c
src/lib/arrays/: arrays.c  meson.build
src/lib/common/: top-down-size-splay.h
src/lib/common_headers/: meson.build
src/lib/cpp_cache/: cache_access.cpp  cache_command.cpp  cache_metadata.cpp  cache_statistics.cpp  cache_trace.cpp  cache_trace_format.cpp  lfu_cache.cpp  lru_cache.cpp  meson.build
src/lib/cpp_lib/: cache_access.cpp  cache_command.cpp  cache_metadata.cpp  cache_statistics.cpp  cache_trace.cpp  cache_trace_format.cpp  meson.build  remaining_lifetime.cpp  save_queue.cpp  util.cpp
src/lib/cpp_struct/: hash_list.cpp  meson.build
src/lib/file/: file.c  meson.build
src/lib/hash/: MurmurHash3.c  TODO  meson.build  miscellaneous_hash.c  splitmix64.c
src/lib/histogram/: basic_histogram.c  fractional_histogram.c  histogram.c  meson.build
src/lib/hyperloglog/: hyperloglog.cpp  meson.build
src/lib/interval_statistics/: interval_statistics.c  meson.build
src/lib/io/: io.c  meson.build
src/lib/lookup/: approximate_hash_table.c  boost_hash_table.cpp  dictionary.c  evicting_hash_table.c  hash_table.c  k_hash_table.c  khash.h  meson.build  parallel_hash_table.c  parallel_list.c  sampled_hash_table.c
src/lib/miss_rate_curve/: basic_miss_rate_curve.c  meson.build  miss_rate_curve.c
src/lib/priority_queue/: heap.c  meson.build  splay_priority_queue.c
src/lib/random/: meson.build  uniform_random.c  zipfian_random.c
src/lib/reuse_stack/: meson.build  reuse_stack.c
src/lib/sampler/: meson.build  phase_sampler.c
src/lib/sampling/: meson.build  reservoir_sampling.c
src/lib/statistics/: meson.build  statistics.c
src/lib/timer/: meson.build  timer.c
src/lib/trace/: generator.c  meson.build  reader.c  trace.c
src/lib/tree/: basic_tree.c  manual_test_tree.c  meson.build  naive_tree.c  sleator_tree.c  splay_tree.c  test_tree.c
src/mrc/: meson.build
src/mrc/average_eviction_time/: average_eviction_time.c  meson.build
src/mrc/bucketed_shards/: bucketed_shards.c  meson.build
src/mrc/evicting_map/: evicting_map.c  meson.build
src/mrc/evicting_quickmrc/: evicting_quickmrc.c  meson.build  qmrc.c  qmrc.h
src/mrc/fixed_size_shards/: fixed_size_shards.c  meson.build
src/mrc/goel_quickmrc/: goel_quickmrc.c  meson.build
src/mrc/mimir/: buckets.c  meson.build  mimir.c
src/mrc_reuse_stack/: fixed_size_shards.c  meson.build  olken.c
src/parda_shards/: LICENSE  main.c  makefile  parda.c  parda.h  parda_mpi.h  parda_omp.c  parda_omp.h  process_args.c  seperate.h  splay.h
src/predictor/: accurate.cpp  list.cpp  lru_ttl_cache.cpp  meson.build  predictive_lfu_ttl_cache.cpp  predictive_lru_ttl_cache.cpp  predictor.cpp  test_iterator_spaces.cpp  test_lifetime_thresholds.cpp  test_list.cpp  test_lru_ttl_cache.cpp  test_predictive_lru_ttl_cache.cpp
src/quickmrc/: main.c
src/run/: deprecated_generate_mrc.c  generate_mrc.c  helper.h  meson.build  run.py  run_oracle.c  runner_arguments.c  runner_arguments.h  trace_runner.c
src/scripts/: meson.build  shardsify.cpp
src/ttl/: clock_cache.hpp  fifo_cache.hpp  lfu_cache.hpp  lru_cache.hpp  meson.build  modified_clock_cache.hpp  sieve_cache.hpp  ttl.cpp  ttl_clock_cache.hpp  ttl_fifo_cache.hpp  ttl_lfu_cache.hpp  ttl_lru_cache.hpp  ttl_sieve_cache.hpp  yang_cache.cpp  yang_sieve_cache.cpp
test/: README.md  generate_mrc.c  histogram_test.c  meson.build  reuse_stack_test.c  tree_test.c
test/lib_test/: meson.build
test/mrc_test/: average_eviction_time_test.c  bucketed_quickmrc_test.c  bucketed_shards_test.c  evicting_map_test.c  evicting_quickmrc_test.c  fixed_rate_shards_test.c  fixed_size_shards_test.c  generate_mrc.c  meson.build  mimir_test.c  olken_test.c  olken_with_ttl_test.c  parda_fixed_rate_shards_test.c  quickmrc_test.c
test/performance_test/: meson.build
test/ttl_test/: c_sieve_cache_test.c  clock_cache_test.cpp  external_sieve.hpp  meson.build  new_ttl_clock_cache_test.cpp  sieve_cache_test.cpp  ttl_clock_cache_test.cpp
test/unit_test/: meson.build
(+313 files in other folders)
