[package]
name = "binarize-traces"
version = "0.1.0"
edition = "2024"

[dependencies]
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.14.10" }
clap = { version = "4.5.32", features = ["derive"] }
fasthash = "0.4.0"
chrono = "0.4.38"
byteorder = "1.5.0"
modular-bitfield = "=0.11.2"