subdir('common_headers')
subdir('file')
subdir('hash')
subdir('io')
subdir('priority_queue')
subdir('random')
subdir('timer') # Relies on common_headers
subdir('trace')
subdir('tree')

# Relies on the 'file' library
subdir('array')

# Relies on 'array' library
subdir('lookup')

# Relies on the 'io' library
subdir('histogram')

# The following relies on the histogram library
subdir('interval_statistics')
subdir('statistics')
subdir('miss_rate_curve')

# Relies on 'histogram' and 'miss_rate_curve' libraries
subdir('sampler')

# Relies on 'io' and 'trace'
subdir('cpp_struct')
subdir('cpp_lib')
subdir('cpp_cache')

# Relies (foolishly) on 'cpp_lib'.
subdir('hyperloglog')